--- a/index-v6.html
+++ b/index-v6.html
@@ -38,6 +38,7 @@
             height: 100vh;
         }
 
+
         #bar {
             display: flex;
             flex-direction: column;
@@ -213,13 +214,65 @@
             align-items: center;
 
         }
+
+        #mobile-header {
+            display: none;
+        }
+
+        @media (max-width: 768px) {
+            .main {
+                flex-direction: column;
+            }
+
+            #bar {
+                width: 100%;
+                height: 100vh;
+            }
+
+            #info {
+                padding: 10px;
+            }
+
+            #map {
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                height: 40px;
+                z-index: 1000;
+                right: 0;
+                border-radius: 10px 10px 0px 0px;
+                box-shadow: 0 -5px 4px rgba(0, 0, 0, 0.1);
+            }
+
+            #mobile-header {
+                position: relative;
+                display: flex;
+                justify-content: center;
+                background: white;
+                padding: 10px;
+                font-size: 18px;
+                font-weight: 500;
+                z-index: 1111;
+                gap: 10px;
+                border-radius: 10px 10px 0px 0px;
+            }
+        }
     </style>
 </head>
 
 <body>
 
     <div class="main">
-        <div id="map"></div>
+        <div id="map">
+            <div id="mobile-header">
+                Map
+                <svg fill="#000000" width="20px" height="20px" viewBox="0 0 32 32" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <title>up</title>
+                    <path d="M11.25 15.688l-7.656 7.656-3.594-3.688 11.063-11.094 11.344 11.344-3.5 3.5z"></path>
+                </svg>
+            </div>
+        </div>
         <div id="bar">
             <div class="custom-geocoder">
                 <input type="text" class="geocoder-input" placeholder="Search for a location" id="geocoder-input">
@@ -457,7 +510,7 @@
                         // Only fit bounds if we have valid points
 
                         map.fitBounds(bounds, {
-                            padding: 50,
+                            padding: 0,
                             maxZoom: 10
                         });
 
